--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,8 +3,8 @@
     <div class="row mb-5">
       <div class="col-md">
         <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-footer-logo">IT<span>solution</span></h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+          <h2 class="ftco-footer-logo">GRUPO<span> Benchmark</span></h2>
+          <p>El <b> Benchmarking </b>es un proceso de que se da en forma continua y de donde se toman referencias de los productos, servicios y metodologías de trabajo de la <b> competencia </b> y <b> empresas líderes </b>; estas referencias se comparan con las de la empresa para realizar mejoras y posteriormente aplicarlas</p>
           <ul class="ftco-footer-social list-unstyled mt-2">
             <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
             <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -14,38 +14,35 @@
       </div>
       <div class="col-md">
         <div class="ftco-footer-widget mb-4 ml-md-5">
-          <h2 class="ftco-heading-2">Explore</h2>
+          <h2 class="ftco-heading-2">Accesos</h2>
           <ul class="list-unstyled">
-            <li><a href="#" class="py-2 d-block">About</a></li>
-            <li><a href="#" class="py-2 d-block">Contact</a></li>
-            <li><a href="#" class="py-2 d-block">What We Do</a></li>
-            <li><a href="#" class="py-2 d-block">Plans &amp; Pricing</a></li>
-            <li><a href="#" class="py-2 d-block">Refund Policy</a></li>
-            <li><a href="#" class="py-2 d-block">Call Us</a></li>
+            <a class="nav-item nav-link active" routerLink="/home">Inicio</a>
+            <a class="nav-item nav-link active" routerLink="/about">Nosotros</a>
+            <a class="nav-item nav-link active" routerLink="/services">Servicios</a>
+            <a class="nav-item nav-link active" routerLink="/contact">Contacto</a>
+            <a class="nav-item cta nav-link active " routerLink="/clients">Ingreso Clientes</a>
           </ul>
         </div>
       </div>
       <div class="col-md">
        <div class="ftco-footer-widget mb-4">
-        <h2 class="ftco-heading-2">Legal</h2>
+        <h2 class="ftco-heading-2">Información</h2>
         <ul class="list-unstyled">
-          <li><a href="#" class="py-2 d-block">Join Us</a></li>
-          <li><a href="#" class="py-2 d-block">Blog</a></li>
-          <li><a href="#" class="py-2 d-block">Privacy &amp; Policy</a></li>
-          <li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-          <li><a href="#" class="py-2 d-block">Careers</a></li>
-          <li><a href="#" class="py-2 d-block">Contact</a></li>
+          <li><a href="#" class="py-2 d-block">Solicitar Acceso</a></li>
+          <li><a href="#" class="py-2 d-block">Soporte Técnico</a></li>
+          <li><a href="#" class="py-2 d-block">Legal y Privacidad</a></li>
+          <li><a href="#" class="py-2 d-block">Términos y Condiciones</a></li>
+          <li><a href="#" class="py-2 d-block">RRHH y Carreras</a></li>
         </ul>
       </div>
     </div>
     <div class="col-md">
       <div class="ftco-footer-widget mb-4">
-       <h2 class="ftco-heading-2">Have a Questions?</h2>
+       <h2 class="ftco-heading-2">Necesita más Información</h2>
        <div class="block-23 mb-3">
          <ul>
-           <li><span class="icon fa fa-map marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-           <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-           <li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">info@yourdomain.com</span></a></li>
+           <li><span class="icon fa fa-map marker"></span><span class="text">San Lorenzo 77, Nueva Córdoba</span></li>
+           <li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">info@grupobechmark.com</span></a></li>
          </ul>
        </div>
      </div>
@@ -56,7 +53,7 @@
 
     <p>
       Copyright &copy;2020<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados
-      
+
       </p>
     </div>
   </div>
